[package]
name = "rs-exec"
version = "0.1.3"
edition = "2021"

[lib]
name = "rs_exec"
path = "src/lib.rs"

[[bin]]
name = "rs-exec"
path = "src/main.rs"

[[bin]]
name = "rs-exec-process"
path = "src/exec_process.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
which = "8.0.2"
sysinfo = "0.36.1"
shlex = "1"
